# tracking-success.jonaskrauss.de

./: .env.example  .gitignore  PLAN.md  PORTFOLIO.md  README.md  docker-compose.yml  traefik.yml
backend/: Dockerfile  pyproject.toml
backend/app/: calculations.py  config.py  database.py  main.py
backend/app/models/: __init__.py  metric.py  user.py
backend/app/routers/: auth.py  metrics.py  yaml_config.py
backend/app/schemas/: metric.py  user.py
backend/app/services/: auth.py  metrics.py
backend/tests/: test_fasting.py  test_metrics.py  test_metrics_full.py
dynamic/: routers.yml
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/cards/: MetricCard.tsx  SummaryCard.tsx
frontend/src/components/charts/: MetricChart.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx
